fatto inizio copertine album in galleria

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
             <!-- ****** -->
             <!-- HEADER -->
             <header
-              class="flex justify-end align-items-center top0-left0-of-abs w100 h90px secondary-color-bg p-10"
+              class="flex justify-end align-items-center top0-left0-of-abs w100 h75px secondary-color-bg p-10"
             >
               <button
                 class="fff-color border-1px secondary-color-bg font-s06rem border-rad30 pl-32 pr-32 pt-11 pb-11 cursor-pointer"
@@ -234,12 +234,9 @@
             </header>
             <!-- ****** -->
             <!-- MAIN-->
-            <main class="h100 p-20 pt-110 primary-color-bg">
+            <main class="h100 primary-color-bg pl-27 pr-27 pt-83">
               <!-- contenitore titoli da in evidenza a scopri -->
-              <ul
-                class="txt-center no-list-style font-s08rem font-w600 w100 pb-20"
-                style="border: 1px solid yellow"
-              >
+              <ul class="txt-center no-list-style font-s08rem font-w600 w100">
                 <li class="in-line-b p-7">
                   <a
                     href=""
@@ -301,6 +298,95 @@
               </ul>
               <!-- parte con gallery dei brani vera e porpria -->
               <div class="overflow-y-auto h93">
+                <h2 class="fff-color">Recently Played</h2>
+                <div
+                  class="row1 flex wrap my-10"
+                  style="border: 1px solid yellow"
+                >
+                  <!-- brano 1 heavy metal -->
+                  <div class="col-l-2 col-m-3 col-6 txt-center cursor-pointer">
+                    <img
+                      src="img/metal_lifting.jpg"
+                      alt="Heavy Metal"
+                      class="object-fit-contain w90"
+                    />
+                    <h4 class="fff-color font-s09rem my-3 cursor-pointer">
+                      Heavy Metal
+                    </h4>
+                    <p class="font-s08rem mb-8 cursor-pointer">Subtitle</p>
+                  </div>
+                  <!-- brano 2 stranger things -->
+                  <div class="col-l-2 col-m-3 col-6 txt-center cursor-pointer">
+                    <img
+                      src="img/stranger.jpeg"
+                      alt="stranger things"
+                      class="object-fit-contain w90"
+                    />
+                    <h4 class="fff-color font-s09rem my-3 cursor-pointer">
+                      Stranger Things, Vol. 1 (a Netflix original series
+                      Soundtrack
+                    </h4>
+                    <p class="font-s08rem mb-8 cursor-pointer">
+                      Kyle Dixon & Michael Stein
+                    </p>
+                  </div>
+                  <!-- brano 3 A quiet Place -->
+                  <div class="col-l-2 col-m-3 col-6 txt-center cursor-pointer">
+                    <img
+                      src="img/aquietplace.jpeg"
+                      alt="Heavy Metal"
+                      class="object-fit-contain w90"
+                    />
+                    <h4 class="fff-color font-s09rem my-3 cursor-pointer">
+                      A quiet place
+                    </h4>
+                    <p class="font-s08rem mb-8 cursor-pointer">Subtitle</p>
+                  </div>
+                  <!-- brano 4 split -->
+                  <div class="col-l-2 col-m-3 col-6 txt-center cursor-pointer">
+                    <img
+                      src="img/split.jpeg"
+                      alt="Heavy Metal"
+                      class="object-fit-contain w90"
+                    />
+                    <h4 class="fff-color font-s09rem my-3 cursor-pointer">
+                      Split
+                    </h4>
+                    <p class="font-s08rem mb-8 cursor-pointer">Subtitle</p>
+                  </div>
+                  <!-- brano 5 A cure for wellness -->
+                  <div class="col-l-2 col-m-3 col-6 txt-center cursor-pointer">
+                    <img
+                      src="img/cure.jpeg"
+                      alt="Heavy Metal"
+                      class="object-fit-contain w90"
+                    />
+                    <h4 class="fff-color font-s09rem my-3 cursor-pointer">
+                      A cure for wellness
+                    </h4>
+                    <p class="font-s08rem mb-8 cursor-pointer">Subtitle</p>
+                  </div>
+                  <!-- brano 6 Sinister -->
+                  <div class="col-l-2 col-m-3 col-6 txt-center cursor-pointer">
+                    <img
+                      src="img/sinister.jpeg"
+                      alt="Heavy Metal"
+                      class="object-fit-contain w90"
+                    />
+                    <h4 class="fff-color font-s09rem my-3 cursor-pointer">
+                      Sinister
+                    </h4>
+                    <p class="font-s08rem mb-8 cursor-pointer">Subtitle</p>
+                  </div>
+                </div>
+                <h2 class="fff-color">Creato per John Doe</h2>
+                <p class="font-s085rem mt-7 mb-8">
+                  Più ascolti più accurati saranno i suggerimenti
+                </p>
+                <h2 class="fff-color">Artisti più popolari</h2>
+                <p class="font-s085rem mt-7 mb-8">
+                  Più ascolti più accurati saranno i suggerimenti
+                </p>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Obcaecati nobis sapiente possimus, doloremque quo corporis,
@@ -458,7 +544,7 @@
       <!-- ****** -->
       <!-- FOOTER -->
       <footer
-        class="h90px z-index-10 w100vw third-color-bg flex v space-between align-items-center p-10"
+        class="h70px z-index-10 w100vw third-color-bg flex space-between align-items-center p-10"
       >
         <!-- brano wraper -->
         <div
