finito tutto tranne hover su immagini brani

--- a/index.html
+++ b/index.html
@@ -297,12 +297,9 @@
                 </li>
               </ul>
               <!-- parte con gallery dei brani vera e porpria -->
-              <div class="overflow-y-auto h93">
+              <div class="overflow-y-auto h93 pb-40">
                 <h2 class="fff-color">Recently Played</h2>
-                <div
-                  class="row1 flex wrap my-10"
-                  style="border: 1px solid yellow"
-                >
+                <div class="row flex wrap mt-10">
                   <!-- brano 1 heavy metal -->
                   <div class="col-l-2 col-m-3 col-6 txt-center cursor-pointer">
                     <img
@@ -313,7 +310,7 @@
                     <h4 class="fff-color font-s09rem my-3 cursor-pointer">
                       Heavy Metal
                     </h4>
-                    <p class="font-s08rem mb-8 cursor-pointer">Subtitle</p>
+                    <p class="font-s08rem cursor-pointer mb-25">Subtitle</p>
                   </div>
                   <!-- brano 2 stranger things -->
                   <div class="col-l-2 col-m-3 col-6 txt-center cursor-pointer">
@@ -326,7 +323,7 @@
                       Stranger Things, Vol. 1 (a Netflix original series
                       Soundtrack
                     </h4>
-                    <p class="font-s08rem mb-8 cursor-pointer">
+                    <p class="font-s08rem cursor-pointer mb-25">
                       Kyle Dixon & Michael Stein
                     </p>
                   </div>
@@ -340,7 +337,7 @@
                     <h4 class="fff-color font-s09rem my-3 cursor-pointer">
                       A quiet place
                     </h4>
-                    <p class="font-s08rem mb-8 cursor-pointer">Subtitle</p>
+                    <p class="font-s08rem cursor-pointer mb-25">Subtitle</p>
                   </div>
                   <!-- brano 4 split -->
                   <div class="col-l-2 col-m-3 col-6 txt-center cursor-pointer">
@@ -352,7 +349,7 @@
                     <h4 class="fff-color font-s09rem my-3 cursor-pointer">
                       Split
                     </h4>
-                    <p class="font-s08rem mb-8 cursor-pointer">Subtitle</p>
+                    <p class="font-s08rem cursor-pointer mb-25">Subtitle</p>
                   </div>
                   <!-- brano 5 A cure for wellness -->
                   <div class="col-l-2 col-m-3 col-6 txt-center cursor-pointer">
@@ -364,7 +361,7 @@
                     <h4 class="fff-color font-s09rem my-3 cursor-pointer">
                       A cure for wellness
                     </h4>
-                    <p class="font-s08rem mb-8 cursor-pointer">Subtitle</p>
+                    <p class="font-s08rem cursor-pointer mb-25">Subtitle</p>
                   </div>
                   <!-- brano 6 Sinister -->
                   <div class="col-l-2 col-m-3 col-6 txt-center cursor-pointer">
@@ -376,166 +373,61 @@
                     <h4 class="fff-color font-s09rem my-3 cursor-pointer">
                       Sinister
                     </h4>
-                    <p class="font-s08rem mb-8 cursor-pointer">Subtitle</p>
+                    <p class="font-s08rem cursor-pointer mb-25">Subtitle</p>
                   </div>
                 </div>
                 <h2 class="fff-color">Creato per John Doe</h2>
-                <p class="font-s085rem mt-7 mb-8">
+                <p class="font-s085rem mt-7 mb-25 mb-25">
                   Più ascolti più accurati saranno i suggerimenti
                 </p>
+                <!-- seconda riga di foto e brani -->
+                <div class="row flex wrap">
+                  <!-- playlist 1 Release Radar -->
+                  <div class="col-l-2 col-m-3 col-6 txt-center cursor-pointer">
+                    <img
+                      src="img/radar.jpeg"
+                      alt="Release Radar"
+                      class="object-fit-contain w90"
+                    />
+                    <h4 class="fff-color font-s09rem my-3 cursor-pointer mb-25">
+                      Release Radar
+                    </h4>
+                  </div>
+                  <!-- playlist 2 playlist Daily Mix -->
+                  <div class="col-l-2 col-m-3 col-6 txt-center cursor-pointer">
+                    <img
+                      src="img/mixdaily.jpeg"
+                      alt="Daily Mix 1"
+                      class="object-fit-contain w90"
+                    />
+                    <h4 class="fff-color font-s09rem my-3 cursor-pointer mb-25">
+                      Daily Mix 1
+                    </h4>
+                  </div>
+                </div>
+                <!-- terza riga con foto tonde -->
                 <h2 class="fff-color">Artisti più popolari</h2>
-                <p class="font-s085rem mt-7 mb-8">
+                <p class="font-s085rem mt-7 mb-20">
                   Più ascolti più accurati saranno i suggerimenti
                 </p>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Obcaecati nobis sapiente possimus, doloremque quo corporis,
-                  consequatur incidunt repellat beatae ullam sint dolor, nostrum
-                  facere cumque iste autem ab ut odit. Lorem ipsum dolor sit
-                  amet consectetur adipisicing elit. Obcaecati nobis sapiente
-                  possimus, doloremque quo corporis, consequatur incidunt
-                  repellat beatae ullam sint dolor, nostrum facere cumque iste
-                  autem ab ut odit. Lorem ipsum dolor sit amet consectetur
-                  adipisicing elit. Obcaecati nobis sapiente possimus,
-                  doloremque quo corporis, consequatur incidunt repellat beatae
-                  ullam sint dolor, nostrum facere cumque iste autem ab ut odit.
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Obcaecati nobis sapiente possimus, doloremque quo corporis,
-                  consequatur incidunt repellat beatae ullam sint dolor, nostrum
-                  facere cumque iste autem ab ut odit. Lorem ipsum dolor sit
-                  amet consectetur adipisicing elit. Obcaecati nobis sapiente
-                  possimus, doloremque quo corporis, consequatur incidunt
-                  repellat beatae ullam sint dolor, nostrum facere cumque iste
-                  autem ab ut odit. Lorem ipsum dolor sit amet consectetur
-                  adipisicing elit. Obcaecati nobis sapiente possimus,
-                  doloremque quo corporis, consequatur incidunt repellat beatae
-                  ullam sint dolor, nostrum facere cumque iste autem ab ut odit.
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Obcaecati nobis sapiente possimus, doloremque quo corporis,
-                  consequatur incidunt repellat beatae ullam sint dolor, nostrum
-                  facere cumque iste autem ab ut odit. Lorem ipsum dolor sit
-                  amet consectetur adipisicing elit. Obcaecati nobis sapiente
-                  possimus, doloremque quo corporis, consequatur incidunt
-                  repellat beatae ullam sint dolor, nostrum facere cumque iste
-                  autem ab ut odit. Lorem ipsum dolor sit amet consectetur
-                  adipisicing elit. Obcaecati nobis sapiente possimus,
-                  doloremque quo corporis, consequatur incidunt repellat beatae
-                  ullam sint dolor, nostrum facere cumque iste autem ab ut odit.
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Obcaecati nobis sapiente possimus, doloremque quo corporis,
-                  consequatur incidunt repellat beatae ullam sint dolor, nostrum
-                  facere cumque iste autem ab ut odit. Lorem ipsum dolor sit
-                  amet consectetur adipisicing elit. Obcaecati nobis sapiente
-                  possimus, doloremque quo corporis, consequatur incidunt
-                  repellat beatae ullam sint dolor, nostrum facere cumque iste
-                  autem ab ut odit. Lorem ipsum dolor sit amet consectetur
-                  adipisicing elit. Obcaecati nobis sapiente possimus,
-                  doloremque quo corporis, consequatur incidunt repellat beatae
-                  ullam sint dolor, nostrum facere cumque iste autem ab ut odit.
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Obcaecati nobis sapiente possimus, doloremque quo corporis,
-                  consequatur incidunt repellat beatae ullam sint dolor, nostrum
-                  facere cumque iste autem ab ut odit. Lorem ipsum dolor sit
-                  amet consectetur adipisicing elit. Obcaecati nobis sapiente
-                  possimus, doloremque quo corporis, consequatur incidunt
-                  repellat beatae ullam sint dolor, nostrum facere cumque iste
-                  autem ab ut odit. Lorem ipsum dolor sit amet consectetur
-                  adipisicing elit. Obcaecati nobis sapiente possimus,
-                  doloremque quo corporis, consequatur incidunt repellat beatae
-                  ullam sint dolor, nostrum facere cumque iste autem ab ut odit.
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Obcaecati nobis sapiente possimus, doloremque quo corporis,
-                  consequatur incidunt repellat beatae ullam sint dolor, nostrum
-                  facere cumque iste autem ab ut odit. Lorem ipsum dolor sit
-                  amet consectetur adipisicing elit. Obcaecati nobis sapiente
-                  possimus, doloremque quo corporis, consequatur incidunt
-                  repellat beatae ullam sint dolor, nostrum facere cumque iste
-                  autem ab ut odit. Lorem ipsum dolor sit amet consectetur
-                  adipisicing elit. Obcaecati nobis sapiente possimus,
-                  doloremque quo corporis, consequatur incidunt repellat beatae
-                  ullam sint dolor, nostrum facere cumque iste autem ab ut odit.
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Obcaecati nobis sapiente possimus, doloremque quo corporis,
-                  consequatur incidunt repellat beatae ullam sint dolor, nostrum
-                  facere cumque iste autem ab ut odit. Lorem ipsum dolor sit
-                  amet consectetur adipisicing elit. Obcaecati nobis sapiente
-                  possimus, doloremque quo corporis, consequatur incidunt
-                  repellat beatae ullam sint dolor, nostrum facere cumque iste
-                  autem ab ut odit. Lorem ipsum dolor sit amet consectetur
-                  adipisicing elit. Obcaecati nobis sapiente possimus,
-                  doloremque quo corporis, consequatur incidunt repellat beatae
-                  ullam sint dolor, nostrum facere cumque iste autem ab ut odit.
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Obcaecati nobis sapiente possimus, doloremque quo corporis,
-                  consequatur incidunt repellat beatae ullam sint dolor, nostrum
-                  facere cumque iste autem ab ut odit. Lorem ipsum dolor sit
-                  amet consectetur adipisicing elit. Obcaecati nobis sapiente
-                  possimus, doloremque quo corporis, consequatur incidunt
-                  repellat beatae ullam sint dolor, nostrum facere cumque iste
-                  autem ab ut odit. Lorem ipsum dolor sit amet consectetur
-                  adipisicing elit. Obcaecati nobis sapiente possimus,
-                  doloremque quo corporis, consequatur incidunt repellat beatae
-                  ullam sint dolor, nostrum facere cumque iste autem ab ut odit.
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Obcaecati nobis sapiente possimus, doloremque quo corporis,
-                  consequatur incidunt repellat beatae ullam sint dolor, nostrum
-                  facere cumque iste autem ab ut odit. Lorem ipsum dolor sit
-                  amet consectetur adipisicing elit. Obcaecati nobis sapiente
-                  possimus, doloremque quo corporis, consequatur incidunt
-                  repellat beatae ullam sint dolor, nostrum facere cumque iste
-                  autem ab ut odit. Lorem ipsum dolor sit amet consectetur
-                  adipisicing elit. Obcaecati nobis sapiente possimus,
-                  doloremque quo corporis, consequatur incidunt repellat beatae
-                  ullam sint dolor, nostrum facere cumque iste autem ab ut odit.
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Obcaecati nobis sapiente possimus, doloremque quo corporis,
-                  consequatur incidunt repellat beatae ullam sint dolor, nostrum
-                  facere cumque iste autem ab ut odit. Lorem ipsum dolor sit
-                  amet consectetur adipisicing elit. Obcaecati nobis sapiente
-                  possimus, doloremque quo corporis, consequatur incidunt
-                  repellat beatae ullam sint dolor, nostrum facere cumque iste
-                  autem ab ut odit. Lorem ipsum dolor sit amet consectetur
-                  adipisicing elit. Obcaecati nobis sapiente possimus,
-                  doloremque quo corporis, consequatur incidunt repellat beatae
-                  ullam sint dolor, nostrum facere cumque iste autem ab ut odit.
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Obcaecati nobis sapiente possimus, doloremque quo corporis,
-                  consequatur incidunt repellat beatae ullam sint dolor, nostrum
-                  facere cumque iste autem ab ut odit. Lorem ipsum dolor sit
-                  amet consectetur adipisicing elit. Obcaecati nobis sapiente
-                  possimus, doloremque quo corporis, consequatur incidunt
-                  repellat beatae ullam sint dolor, nostrum facere cumque iste
-                  autem ab ut odit. Lorem ipsum dolor sit amet consectetur
-                  adipisicing elit. Obcaecati nobis sapiente possimus,
-                  doloremque quo corporis, consequatur incidunt repellat beatae
-                  ullam sint dolor, nostrum facere cumque iste autem ab ut odit.
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Obcaecati nobis sapiente possimus, doloremque quo corporis,
-                  consequatur incidunt repellat beatae ullam sint dolor, nostrum
-                  facere cumque iste autem ab ut odit. Lorem ipsum dolor sit
-                  amet consectetur adipisicing elit. Obcaecati nobis sapiente
-                  possimus, doloremque quo corporis, consequatur incidunt
-                  repellat beatae ullam sint dolor, nostrum facere cumque iste
-                  autem ab ut odit. Lorem ipsum dolor sit amet consectetur
-                  adipisicing elit. Obcaecati nobis sapiente possimus,
-                  doloremque quo corporis, consequatur incidunt repellat beatae
-                  ullam sint dolor, nostrum facere cumque iste autem ab ut odit.
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Obcaecati nobis sapiente possimus, doloremque quo corporis,
-                  consequatur incidunt repellat beatae ullam sint dolor, nostrum
-                  facere cumque iste autem ab ut odit. Lorem ipsum dolor sit
-                  amet consectetur adipisicing elit. Obcaecati nobis sapiente
-                  possimus, doloremque quo corporis, consequatur incidunt
-                  repellat beatae ullam sint dolor, nostrum facere cumque iste
-                  autem ab ut odit. Lorem ipsum dolor sit amet consectetur
-                  adipisicing elit. Obcaecati nobis sapiente possimus,
-                  doloremque quo corporis, consequatur incidunt repellat beatae
-                  ullam sint dolor, nostrum facere cumque iste autem ab ut odit.
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Obcaecati nobis sapiente possimus, doloremque quo corporis,
-                  consequatur incidunt repellat beatae ullam sint dolor, nostrum
-                  facere cumque iste autem ab ut odit.
-                </p>
+                <div class="row flex wrap mb-20">
+                  <!-- playlist 1 Release Radar -->
+                  <div class="col-l-2 col-m-3 col-6 txt-center cursor-pointer">
+                    <img
+                      src="img/youg.jpeg"
+                      alt="Release Radar"
+                      class="object-fit-contain w90 border-rad50"
+                    />
+                  </div>
+                  <!-- playlist 2 playlist Daily Mix -->
+                  <div class="col-l-2 col-m-3 col-6 txt-center cursor-pointer">
+                    <img
+                      src="img/einaudi.jpeg"
+                      alt="Daily Mix 1"
+                      class="object-fit-contain w90 border-rad50"
+                    />
+                  </div>
+                </div>
               </div>
             </main>
           </div>
