messe funzionalità a icone aside oltre mobile

--- a/index.html
+++ b/index.html
@@ -79,44 +79,65 @@
             <!-- wrapper della parte alta -->
             <div class="logoHomePlaylist-wraper h89 align-items-center">
               <!-- lista icone in alto da m in su -->
-              <ul class="upper-icon-from-m no-list-style w100 pt-17">
-                <li>
+              <ul class="upper-icon-for-m no-list-style w100 pt-17">
+                <li class="h34px">
                   <a
-                    class="active-aside in-line-b w100 no-decorate fff-color font-s08rem pl-13 pb-6 pt-6"
-                    href=""
+                    class="flex space-between w100 no-decorate grey-txt hover-fff-color font-s08rem h100"
+                    href="#"
+                    id="home"
                   >
-                    <img
-                      src="img/home.svg"
-                      alt="home"
-                      class="vertical-middle w11"
-                    />
-                    Home
+                    <div
+                      class="aside-icon-element active w3px h100"
+                      id="lineDihome"
+                    ></div>
+                    <div class="flex align-items-center w100">
+                      <img
+                        src="img/home.svg"
+                        alt="home"
+                        class="vertical-middle w33px pl-9"
+                      />
+                      <span class="in-line-b pl-5"> Home </span>
+                    </div>
                   </a>
                 </li>
-                <li>
+                <li class="h34px">
                   <a
-                    class="in-line-b w100 no-decorate grey-txt font-s08rem hover-fff-color pl-13 pb-6 pt-6"
-                    href=""
+                    class="flex space-between w100 no-decorate grey-txt hover-fff-color font-s08rem h100"
+                    href="#"
+                    id="cerca"
                   >
-                    <img
-                      src="img/search.svg"
-                      alt="search"
-                      class="vertical-middle w11"
-                    />
-                    Cerca
+                    <div
+                      class="aside-icon-element w3px h100"
+                      id="lineDiCerca"
+                    ></div>
+                    <div class="flex align-items-center w100">
+                      <img
+                        src="img/search.svg"
+                        alt="cerca"
+                        class="vertical-middle w33px pl-9"
+                      />
+                      <span class="in-line-b pl-5"> Cerca </span>
+                    </div>
                   </a>
                 </li>
-                <li>
+                <li class="h34px">
                   <a
-                    class="in-line-b w100 no-decorate grey-txt font-s08rem hover-fff-color pl-13 pb-6 pt-6"
-                    href=""
+                    class="flex space-between w100 no-decorate grey-txt hover-fff-color font-s08rem h100"
+                    href="#"
+                    id="libreria"
                   >
-                    <img
-                      src="img/libreria.svg"
-                      alt="libreria"
-                      class="vertical-middle w11"
-                    />
-                    La tua libreria
+                    <div
+                      class="aside-icon-element w3px h100"
+                      id="lineDilibreria"
+                    ></div>
+                    <div class="flex align-items-center w100">
+                      <img
+                        src="img/libreria.svg"
+                        alt="libreria"
+                        class="vertical-middle w33px pl-9"
+                      />
+                      <span class="in-line-b pl-5"> La tua libreria </span>
+                    </div>
                   </a>
                 </li>
               </ul>
@@ -719,5 +740,6 @@
         </ul>
       </footer>
     </div>
+    <script src="main.js"></script>
   </body>
 </html>
