cuore dei like cliccabile toggle da pieno a vuoto

--- a/index.html
+++ b/index.html
@@ -628,17 +628,17 @@
             class="heartFolder-wrap flex-y space-between align-items-center h38px no-list-style"
           >
             <li>
-              <a href="" class="grey-txt">
-                <i class="fas fa-heart display-no font-s1e1rem"></i>
+              <a href="#" class="grey-txt hover-fff-color" id="cuorePieno">
+                <i class="fas fa-heart font-s1e1rem"></i>
               </a>
             </li>
             <li>
-              <a href="" class="grey-txt hover-fff-color">
+              <a href="#" class="grey-txt hover-fff-color" id="cuoreVuoto">
                 <i class="far fa-heart mb-2 font-s01e1rem"></i>
               </a>
             </li>
             <li>
-              <a href="" class="grey-txt hover-fff-color">
+              <a href="#" class="grey-txt hover-fff-color">
                 <i class="far fa-folder font-s08rem font-s1e1rem"></i>
               </a>
             </li>
