linee verdi sotto titoli menu switchabili onclick

--- a/index.html
+++ b/index.html
@@ -257,59 +257,73 @@
             >
               <li class="in-line-b p-7">
                 <a
-                  href=""
+                  href="#"
                   class="no-decorate flex-y align-items-center space-between h20px grey-txt hover-fff-color pos-rel"
+                  id="evidenza"
                   >IN EVIDENZA
-                  <div class="active-page h3px w30px brand-color-bg"></div>
+                  <div
+                    class="active-page h3px w30px brand-color-bg"
+                    id="evidenzaLine"
+                  ></div>
                 </a>
               </li>
               <li class="in-line-b p-7">
                 <a
-                  href=""
+                  href="#"
                   class="no-decorate flex-y align-items-center space-between h20px grey-txt hover-fff-color pos-rel"
+                  id="podcast"
                   >PODCAST
                   <div
-                    class="active-page h3px w30px brand-color-bg display-no"
+                    class="active-page h3px w30px brand-color-bg"
+                    id="podcastLine"
                   ></div>
                 </a>
               </li>
               <li class="in-line-b p-7">
                 <a
-                  href=""
+                  href="#"
                   class="no-decorate flex-y align-items-center space-between h20px grey-txt hover-fff-color pos-rel"
+                  id="classifiche"
                   >CLASSIFICHE
                   <div
-                    class="active-page h3px w30px brand-color-bg display-no"
+                    class="active-page h3px w30px brand-color-bg"
+                    id="classificheLine"
                   ></div>
                 </a>
               </li>
               <li class="in-line-b p-7">
                 <a
-                  href=""
+                  href="#"
                   class="no-decorate flex-y align-items-center space-between h20px grey-txt hover-fff-color pos-rel"
+                  id="generi"
                   >GENERI E MOOD
                   <div
-                    class="active-page h3px w30px brand-color-bg display-no"
+                    class="active-page h3px w30px brand-color-bg"
+                    id="generiLine"
                   ></div>
                 </a>
               </li>
               <li class="in-line-b p-7">
                 <a
-                  href=""
+                  href="#"
                   class="no-decorate flex-y align-items-center space-between h20px grey-txt hover-fff-color pos-rel"
+                  id="NuoveUscite"
                   >NUOVE USCITE
                   <div
-                    class="active-page h3px w30px brand-color-bg display-no"
+                    class="active-page h3px w30px brand-color-bg"
+                    id="NuoveUsciteLine"
                   ></div>
                 </a>
               </li>
               <li class="in-line-b p-7">
                 <a
-                  href=""
+                  href="#"
                   class="no-decorate flex-y align-items-center space-between h20px grey-txt hover-fff-color pos-rel"
+                  id="scopri"
                   >SCOPRI
                   <div
-                    class="active-page h3px w30px brand-color-bg display-no"
+                    class="active-page h3px w30px brand-color-bg"
+                    id="scopriLine"
                   ></div>
                 </a>
               </li>
