migliorato scroll playlist

--- a/index.html
+++ b/index.html
@@ -149,22 +149,21 @@
                   Playlist
                 </h5>
                 <!-- inizio lista crea e nuova playlist -->
-                <ul id="newPlaylistUl" class="overflow-y-auto h75">
-                  <li id="createNewPlay">
-                    <a href="#" class="create-playlist">
-                      <i
-                        class="fas fa-plus black-color font-s1e10rem p-7 hover-fff-color-bg"
-                      ></i>
-                      <span id="scrittaCreaPlay">Crea Playlist</span>
-                      <input
-                        type="text"
-                        placeholder="La mia musica"
-                        class="black-color-bg no-border fff-color no-outline"
-                        id="inputNewPlay"
-                      />
-                    </a>
-                  </li>
-                </ul>
+                <div id="createNewPlay">
+                  <a href="#" class="create-playlist">
+                    <i
+                      class="fas fa-plus black-color font-s1e10rem p-7 hover-fff-color-bg"
+                    ></i>
+                    <span id="scrittaCreaPlay">Crea Playlist</span>
+                    <input
+                      type="text"
+                      placeholder="La mia musica"
+                      class="black-color-bg no-border fff-color no-outline"
+                      id="inputNewPlay"
+                    />
+                  </a>
+                </div>
+                <ul id="newPlaylistUl" class="overflow-y-auto h75"></ul>
               </div>
             </div>
           </div>
