--- a/index.html
+++ b/index.html
@@ -178,9 +178,7 @@
                 />Installa app
               </a>
               <!-- linea (horizontal rule) tra istalla e avatar profilo -->
-              <div
-                class="line h1px w100 grey-color-bg w92 border-rad2 my-11"
-              ></div>
+              <div class="line h1px w100 grey-color-bg border-rad2 my-11"></div>
               <!-- avatar e nome profilo -->
               <a href="" class="in-line-b w100 pos-rel"
                 ><div
