--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                 <!-- immagine 1 heavy metal -->
                 <div class="col-l-2 col-m-3 col-6">
                   <div class="img-e-txt-wrap w93 flex-y align-items-center">
-                    <div class="img-wrap pos-rel pos-rel">
+                    <div class="metal img-wrap pos-rel pos-rel">
                       <div class="layer pos-abs">
                         <div
                           class="circle-of-play opacity0 cursor-pointer fff-color border-rad50 border-3px h30px w30px pos-abs"
@@ -317,16 +317,18 @@
                         class="w100"
                       />
                     </div>
-                    <h4 class="fff-color font-s09rem my-4 cursor-pointer">
+                    <h4 class="metal fff-color font-s09rem my-4 cursor-pointer">
                       Heavy Metal
                     </h4>
-                    <p class="font-s08rem cursor-pointer mb-15">Subtitle</p>
+                    <p class="metal font-s08rem cursor-pointer mb-15">
+                      Subtitle
+                    </p>
                   </div>
                 </div>
                 <!-- immagine 2 stanger e titoli -->
                 <div class="col-l-2 col-m-3 col-6 h50">
                   <div class="img-e-txt-wrap w93 flex-y align-items-center">
-                    <div class="img-wrap pos-rel">
+                    <div class="stranger img-wrap pos-rel">
                       <div class="layer pos-abs">
                         <div
                           class="circle-of-play opacity0 cursor-pointer fff-color border-rad50 border-3px h30px w30px pos-abs"
@@ -343,12 +345,12 @@
                       />
                     </div>
                     <h4
-                      class="fff-color font-s09rem my-4 txt-center cursor-pointer"
+                      class="stranger fff-color font-s09rem my-4 txt-center cursor-pointer"
                     >
                       Stranger Things, Vol. 1 (a Netflix original series
                       Soundtrack
                     </h4>
-                    <p class="font-s08rem cursor-pointer mb-15">
+                    <p class="stranger font-s08rem cursor-pointer mb-15">
                       Kyle Dixon & Michael Stein
                     </p>
                   </div>
@@ -356,7 +358,7 @@
                 <!-- immagine 3 a quiet place -->
                 <div class="col-l-2 col-m-3 col-6 h50">
                   <div class="img-e-txt-wrap w93 flex-y align-items-center">
-                    <div class="img-wrap pos-rel">
+                    <div class="quiet img-wrap pos-rel">
                       <div class="layer pos-abs">
                         <div
                           class="circle-of-play opacity0 cursor-pointer fff-color border-rad50 border-3px h30px w30px pos-abs"
@@ -372,16 +374,18 @@
                         class="w100"
                       />
                     </div>
-                    <h4 class="fff-color font-s09rem my-4 cursor-pointer">
+                    <h4 class="quiet fff-color font-s09rem my-4 cursor-pointer">
                       A quiet place
                     </h4>
-                    <p class="font-s08rem cursor-pointer mb-15">Subtitle</p>
+                    <p class="quiet font-s08rem cursor-pointer mb-15">
+                      Subtitle
+                    </p>
                   </div>
                 </div>
                 <!-- immagine 4 a slit -->
                 <div class="col-l-2 col-m-3 col-6 h50">
                   <div class="img-e-txt-wrap w93 flex-y align-items-center">
-                    <div class="img-wrap pos-rel">
+                    <div class="split img-wrap pos-rel">
                       <div class="layer pos-abs">
                         <div
                           class="circle-of-play opacity0 cursor-pointer fff-color border-rad50 border-3px h30px w30px pos-abs"
@@ -393,16 +397,18 @@
                       </div>
                       <img src="img/split.jpeg" alt="split" class="w100" />
                     </div>
-                    <h4 class="fff-color font-s09rem my-4 cursor-pointer">
+                    <h4 class="split fff-color font-s09rem my-4 cursor-pointer">
                       Split
                     </h4>
-                    <p class="font-s08rem cursor-pointer mb-15">Subtitle</p>
+                    <p class="split font-s08rem cursor-pointer mb-15">
+                      Subtitle
+                    </p>
                   </div>
                 </div>
                 <!-- immagine 5 a cure for wellness -->
                 <div class="col-l-2 col-m-3 col-6 h50">
                   <div class="img-e-txt-wrap w93 flex-y align-items-center">
-                    <div class="img-wrap pos-rel">
+                    <div class="cure img-wrap pos-rel">
                       <div class="layer pos-abs">
                         <div
                           class="circle-of-play opacity0 cursor-pointer fff-color border-rad50 border-3px h30px w30px pos-abs"
@@ -418,16 +424,18 @@
                         class="w100"
                       />
                     </div>
-                    <h4 class="fff-color font-s09rem my-4 cursor-pointer">
+                    <h4 class="cure fff-color font-s09rem my-4 cursor-pointer">
                       A cure for wellness
                     </h4>
-                    <p class="font-s08rem cursor-pointer mb-15">Subtitle</p>
+                    <p class="cure font-s08rem cursor-pointer mb-15">
+                      Subtitle
+                    </p>
                   </div>
                 </div>
                 <!-- immagine 6 a cure sinister -->
                 <div class="col-l-2 col-m-3 col-6 h50">
                   <div class="img-e-txt-wrap w93 flex-y align-items-center">
-                    <div class="img-wrap pos-rel">
+                    <div class="sinister img-wrap pos-rel">
                       <div class="layer pos-abs">
                         <div
                           class="circle-of-play opacity0 cursor-pointer fff-color border-rad50 border-3px h30px w30px pos-abs"
@@ -443,10 +451,14 @@
                         class="w100"
                       />
                     </div>
-                    <h4 class="fff-color font-s09rem my-4 cursor-pointer">
+                    <h4
+                      class="sinister fff-color font-s09rem my-4 cursor-pointer"
+                    >
                       sinister
                     </h4>
-                    <p class="font-s08rem cursor-pointer mb-15">Subtitle</p>
+                    <p class="sinister font-s08rem cursor-pointer mb-15">
+                      Subtitle
+                    </p>
                   </div>
                 </div>
               </div>
@@ -455,7 +467,7 @@
                 <!-- immagine 1 release radar -->
                 <div class="col-l-2 col-m-3 col-6">
                   <div class="img-e-txt-wrap w93 flex-y align-items-center">
-                    <div class="img-wrap pos-rel">
+                    <div class="radar img-wrap pos-rel">
                       <!-- wrapper del titolo e sottotitolo seconda linea -->
                       <div class="titles-in-main-row2 pos-abs w330px">
                         <h2 class="fff-color">
@@ -480,16 +492,18 @@
                         class="w100"
                       />
                     </div>
-                    <h4 class="fff-color font-s09rem my-4 cursor-pointer">
+                    <h4 class="radar fff-color font-s09rem my-4 cursor-pointer">
                       Release Radar
                     </h4>
-                    <p class="font-s08rem cursor-pointer mb-15">Subtitle</p>
+                    <p class="radar font-s08rem cursor-pointer mb-15">
+                      Subtitle
+                    </p>
                   </div>
                 </div>
                 <!-- immagine 2 Daily Mix -->
                 <div class="col-l-2 col-m-3 col-6 h50">
                   <div class="img-e-txt-wrap w93 flex-y align-items-center">
-                    <div class="img-wrap pos-rel">
+                    <div class="mix img-wrap pos-rel">
                       <div class="layer pos-abs">
                         <div
                           class="circle-of-play opacity0 cursor-pointer fff-color border-rad50 border-3px h30px w30px pos-abs"
@@ -505,7 +519,7 @@
                         class="w100"
                       />
                     </div>
-                    <h4 class="fff-color font-s09rem my-4 cursor-pointer">
+                    <h4 class="mix fff-color font-s09rem my-4 cursor-pointer">
                       Daily Mix 1
                     </h4>
                   </div>
@@ -591,11 +605,12 @@
               src="img/sinister.jpeg"
               alt="sinister"
               class="w35px vertical-middle"
+              id="imgBranoSottoSx"
             />
             <!-- contenitore testi del brano -->
             <div class="pl-10">
               <p class="fff-color font-w700">
-                <strong>Sinister</strong>
+                <strong id="titleBranoSottoSx">Sinister</strong>
               </p>
               <p class="font-s08rem hover-underline">Brano Nome</p>
             </div>
@@ -604,13 +619,13 @@
           <ul
             class="heartFolder-wrap flex-y space-between align-items-center h38px w43px no-list-style"
           >
-            <li>
-              <a href="#" class="grey-txt hover-fff-color" id="cuorePieno">
+            <li id="cuorePieno">
+              <a href="#" class="grey-txt hover-fff-color">
                 <i class="fas fa-heart font-s1rem"></i>
               </a>
             </li>
-            <li>
-              <a href="#" class="grey-txt hover-fff-color" id="cuoreVuoto">
+            <li id="cuoreVuoto">
+              <a href="#" class="grey-txt hover-fff-color">
                 <i class="far fa-heart font-s01e1rem"></i>
               </a>
             </li>
